# Teleop_MIRO

./: .gitattributes  .gitignore  README.md  run_teleop_miro
doc/: manifest.yaml
doc/html/: command__logic_8cpp.html  command__logic_8cpp__incl.map  command__logic_8cpp__incl.md5  command__logic_8cpp_source.html  dir_4ddb56a3e4a228b89fe25e8c8df5a578.html  dir_ae1c345ddf03e94427efe9ccc7a8e9b8.html  files.html  gesture__processing_8cpp.html  gesture__processing_8cpp_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index-msg.html  index.html  interpreter_8cpp.html  interpreter_8cpp_source.html  monte__carlo_8cpp.html  monte__carlo_8cpp__incl.map  monte__carlo_8cpp__incl.md5  monte__carlo_8cpp_source.html  pertinence__mapping_8cpp.html  pertinence__mapping_8cpp__incl.map  pertinence__mapping_8cpp__incl.md5  pertinence__mapping_8cpp_source.html  robot__controller_8cpp.html  robot__controller_8cpp__incl.md5  robot__controller_8cpp_source.html  spatial__reasoner_8cpp.html  spatial__reasoner_8cpp_source.html
doc/html/msg/: Path.html
doc/html/srv/: GestureProcessing.html  MonteCarlo.html  PertinenceMapping.html  SpatialReasoner.html  rrtStarSRV.html
launch/: miro_teleop.launch
miro_msgs/: CMakeLists.txt  package.xml
miro_msgs/scripts/: move_miro.py
miro_msgs/src/: miro_test_control.cpp
miro_teleop/: CMakeLists.txt  move_miro.py  package.xml
miro_teleop/doc/: manifest.yaml
miro_teleop/doc/html/: command__logic_8cpp.html  command__logic_8cpp__incl.md5  command__logic_8cpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  gesture__processing_8cpp.html  gesture__processing_8cpp__incl.map  gesture__processing_8cpp__incl.md5  gesture__processing_8cpp_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index-msg.html  index.html  interpreter_8cpp.html  interpreter_8cpp__incl.map  interpreter_8cpp__incl.md5  interpreter_8cpp_source.html  monte__carlo_8cpp.html  monte__carlo_8cpp_source.html  move__miro_8py.html  move__miro_8py_source.html  namespacemembers.html  namespacemembers_func.html  namespacemove__miro.html  namespaces.html  pertinence__mapping_8cpp.html  pertinence__mapping_8cpp__incl.md5  pertinence__mapping_8cpp_source.html  robot__controller_8cpp.html  robot__controller_8cpp__incl.map  robot__controller_8cpp__incl.md5  robot__controller_8cpp_source.html  spatial__reasoner_8cpp.html  spatial__reasoner_8cpp__incl.map  spatial__reasoner_8cpp__incl.md5  spatial__reasoner_8cpp_source.html
miro_teleop/doc/html/msg/: Path.html  Region.html  platform_control.html
miro_teleop/doc/html/srv/: GestureProcessing.html  MonteCarlo.html  PertinenceMapping.html  SpatialReasoner.html  rrtStarSRV.html
miro_teleop/launch/: miro_teleop.launch
miro_teleop/msg/: Path.msg  Region.msg
miro_teleop/src/: .interpreter.cpp.swp  .monte_carlo.cpp.swp  command_logic.cpp  gesture_processing.cpp  gesture_processing_client.cpp  gesture_processing_server.cpp  interpreter.cpp  monte_carlo.cpp  montecarlo.cpp  pertinence_mapping.cpp  robot_controller.cpp  spatial_reasoner.cpp  tracker_node.cpp
miro_teleop/srv/: GestureProcessing.srv  MonteCarlo.srv  PertinenceMapping.srv  SpatialReasoner.srv  rrtStarSRV.srv
mocap_optitrack-master/config/: mocap.yaml
ros_cagg_msgs/: CMakeLists.txt  package.xml
ros_cagg_msgs/msg/: cagg_tag.msg  cagg_tags.msg
rosjava_custom_srv/: CMakeLists.txt  package.xml
rosjava_custom_srv/srv/: CustomService.srv
rrtStar/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rrtStar/src/: rrts_main.cpp  rrts_main.cpp~  rrtstar_client.cpp
tutorial_custom_srv/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
tutorial_custom_srv/client_server/: build.gradle
tutorial_custom_srv/client_server/src/main/java/org/ros/rosjava_tutorial_services/: Client.java  Server.java
tutorial_custom_srv/gradle/wrapper/: gradle-wrapper.properties
