<?xml version="1.0"?>
<package format="2">

  <name>miro_teleop</name>
  <version>0.0.0</version>
  <description>The miro_teleop package</description>

  <maintainer email="mateus.sm93@gmail.com">Mateus Sanches Moura</maintainer>
  <maintainer email="sumanghosh29@gmail.com">Suman Ghosh</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/ghoshsuman/Teleop_MIRO</url>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rrtStarMsgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rrtStarMsgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rrtStarMsgs</exec_depend>
  
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>opencv2</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  
</package>
