<?xml version="1.0"?>
<package>
  <name>ros_cagg_msgs</name>
  <version>0.1.0</version>
  <description>The ROS-CAGG bridge messages</description>

  
  <maintainer email="luca.buoncompagni@edu.unige.it">Luca Buoncompagni</maintainer>
  <author email="luca.buoncompagni@edu.unige.it">Luca Buoncompagni</author>
  <url type="website">https://github.com/buoncubi/speech_based_teleop_commander</url>
  <license>GNUv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
